--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,11 @@
+SET(GCC_COVERAGE_COMPILE_FLAGS "-fpermissive")
+
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_EXTENSIONS OFF)
+
+add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})
+
 include_directories(.)
 
 add_executable(
