--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,8 @@
         "csignal": "cpp",
         "list": "cpp",
         "variant": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "mutex": "cpp",
+        "condition_variable": "cpp"
     }
 }
