--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,10 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
-            }
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
         },
         {
             "label": "clean",
