--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "depends/libsnark"]
-	path = depends/libsnark
-	url = https://github.com/scipr-lab/libsnark.git
+[submodule "depends/Silencer"]
+	path = depends/Silencer
+	url = https://github.com/GunClear/Silencer.git
