Line-level debugging for proofs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,17 @@
             "problemMatcher": [
                 "$rustc"
             ]
+        },
+        {
+            "type": "cargo",
+            "label": "cargo run",
+            "command": "RUST_BACKTRACE=1 cargo",
+            "args": [
+                "run"
+            ],
+            "problemMatcher": [
+                "$rustc"
+            ]
         }
     ]
 }
